feat(Editor): Novos estilos

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stone</title>
-    <link rel="shortcut icon" href="./public/favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
     <link rel="stylesheet" href="./src/css/global.css">
 <body>
     <header class="site-header">
         <div class="logo">
-            <img src="./public/favicon.svg" alt="Logo">
+            <img src="/favicon.svg" alt="Logo">
             <h2>Stone</h2>
         </div>
 
@@ -31,12 +31,6 @@
         </div>
 
         <div class="actions">
-            <button type="button" class="button btn-preview">
-                Sair
-            </button>
-            <button type="button" class="button search-editor">
-                Buscar
-            </button>
             <button type="button" class="fab">
                 <span class="material-symbols-outlined">
                     more_vert
