feat(Configurações): Ajustando configuração dos temas

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="terr">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,9 +31,9 @@
         </div>
 
         <div class="actions">
-            <button type="button" class="fab">
+            <button type="button" class="fab" onclick="alterTheme()">
                 <span class="material-symbols-outlined">
-                    more_vert
+                    format_paint
                 </span>
             </button>
             <button type="button" class="fab">
@@ -78,4 +78,5 @@
     </div>
 </body>
 <script type="module" src="./markdown.js"></script>
+<script src="./index.js"></script>
 </html>
