feat(Editor): pdf

--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
         </div>
     </div>
 </body>
-<script type="module" src="./codemirror.js"></script>
+<script type="module" src="./editor.js"></script>
 <script src="./index.js"></script>
 </html>
