--- a/index.html
+++ b/index.html
@@ -45,8 +45,31 @@
     </header>
 
     <div class="site-layout">
-        <menu class="site-menu">
-            
+        <menu class="site-menu actived">
+            <article class="site-menu-actions">
+                <div>
+                    <button type="button" class="fab fab-mini" onclick="addNote()">
+                        <span class="material-symbols-outlined">
+                            note_add
+                        </span>
+                    </button>
+                    <button type="button" class="fab fab-mini" onclick="addFolder()">
+                        <span class="material-symbols-outlined">
+                            create_new_folder
+                        </span>
+                    </button>
+                    <button type="button" class="fab fab-mini" onclick="sync()">
+                        <span class="material-symbols-outlined">
+                            sync
+                        </span>
+                    </button>
+                </div>
+                <button type="button" class="fab fab-mini" onclick="toggleSiteMenu()">
+                    <span class="material-symbols-outlined">
+                        menu
+                    </span>
+                </button>
+            </article>
         </menu>
     
         <div class="box-content">
