feat(Menu): excluir separador com dois clicks e ajuste nos titles dos menus

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,17 +50,17 @@
         <menu class="site-menu actived">
             <article class="site-menu-actions">
                 <div>
-                    <button type="button" class="fab fab-mini" id="btn-add-file">
+                    <button type="button" class="fab fab-mini" id="btn-add-file" title="Criar um arquivo">
                         <span class="material-symbols-outlined">
                             note_add
                         </span>
                     </button>
-                    <button type="button" class="fab fab-mini" id="btn-add-folder">
+                    <button type="button" class="fab fab-mini" id="btn-add-folder" title="Criar uma pasta">
                         <span class="material-symbols-outlined">
                             create_new_folder
                         </span>
                     </button>
-                    <button type="button" class="fab fab-mini" id="btn-sync">
+                    <button type="button" class="fab fab-mini" id="btn-sync" title="Sincronizar os arquivos">
                         <span class="material-symbols-outlined">
                             sync
                         </span>
