feat(Editor): empty state quando não houver arquivos em edição

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,11 +82,12 @@
         <div class="box-content">
             <div class="box-main">
                 <main class="site-main">
-
+                    <span class="editor"></span>
+                    <span class="empty-state"></span>
                 </main>
 
                 <article class="site-index">
-
+                    
                 </article>
             </div>
 
