feat(Menu): edição do nome dos arquivos em actions

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,6 +70,11 @@
                             horizontal_rule
                         </span>
                     </button>
+                    <button type="button" class="fab fab-mini" id="btn-rename" title="Renomear">
+                        <span class="material-symbols-outlined">
+                            edit
+                        </span>
+                    </button>
                 </div>
                 <button type="button" class="fab fab-mini" id="btn-toggle-menu">
                     <span class="material-symbols-outlined">
