feat(Editor): search por tags

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
             </div>
             <button type="button" class="fab">
                 <span class="material-symbols-outlined">
-                    sell
+                    instant_mix
                 </span>
             </button>
         </div>
