feat(Editor): modo leitura criado

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,12 +28,17 @@
         </div>
 
         <div class="actions">
-            <button type="button" class="fab" id="btn-theme">
+            <button type="button" class="fab" id="btn-read-mode" title="Modo de leitura">
+                <span class="material-symbols-outlined">
+                    book_ribbon
+                </span>
+            </button>
+            <button type="button" class="fab" id="btn-theme" title="Escolha um tema">
                 <span class="material-symbols-outlined">
                     format_paint
                 </span>
             </button>
-            <button type="button" class="fab">
+            <button type="button" class="fab" id="btn-user-settings" title="Configurações do usuário">
                 <span class="material-symbols-outlined">
                     account_circle
                 </span>
